# polysynergy

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CONTENT_SYSTEM_ARCHITECTURE.md  Caddyfile  LICENSE  LOCAL_DEVELOPMENT.md  METADATA_MANAGEMENT_IMPLEMENTATION_PLAN.md  README.md  add-subdomain.sh  check-status.sh  deploy-swarm.sh  docker-compose.build.yml  docker-compose.local.yml  docker-compose.ollama.yml  docker-compose.prod.yml  docker-compose.yml  docker-stack.yml  setup-local-dev.sh  setup-local.sh  setup-webhooks.md  swarm-deployment-guide.md  webhook-server.py  webhook.service
nodes_dev/: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
nodes_dev/polysynergy_nodes_dev/: __init__.py
nodes_dev/polysynergy_nodes_dev/agent/: agent.py  agent_tool.py  agent_tool_result.py  chat_memory.py  embedding.py  mistral_agent.py  mistral_client.py  mistral_embeddings.py  openai_client.py  openai_embedding_client.py  qdrant_client.py  vector_store.py
nodes_dev/polysynergy_nodes_dev/agent/services/chat_memories/: chat_memory_base.py  dynamo_db_chat_memory.py
nodes_dev/polysynergy_nodes_dev/agent/services/clients/: client_base.py  mistral_ai.py  (+1 more)
nodes_dev/polysynergy_nodes_dev/agent/utils/: find_connected_client.py  find_connected_context.py  find_connected_embeddings_client.py  find_connected_memory.py  find_connected_tools.py
nodes_dev/polysynergy_nodes_dev/openai/: openai_agent.py  openai_tool.py  openai_web_search_tool.py
nodes_dev/polysynergy_nodes_dev/openai/utils/: find_connected_native_tools.py  find_connected_path_tools.py  output_schema.py
(+71 files in other folders)
